[gd_scene load_steps=49 format=3 uid="uid://dtwxdvapltg42"]

[ext_resource type="Shader" uid="uid://btojge1etvq83" path="res://shaders/background.gdshader" id="1_lbhrr"]
[ext_resource type="PackedScene" uid="uid://csa5wg3bw580j" path="res://scenes/player.tscn" id="1_oxd0a"]
[ext_resource type="Script" uid="uid://7yc6qyhcfmx5" path="res://scripts/world.gd" id="2_2shgi"]
[ext_resource type="Texture2D" uid="uid://ca5n4on7l32uc" path="res://assets/Double/keyboard_a_outline.png" id="4_lbhrr"]
[ext_resource type="Texture2D" uid="uid://c31jthhvejtul" path="res://assets/Double/keyboard_w_outline.png" id="4_u5sy4"]
[ext_resource type="Script" uid="uid://jf8iirfqjcm2" path="res://scripts/Keyboard_Overlay.gd" id="4_vtaks"]
[ext_resource type="Texture2D" uid="uid://bqrl0atifsjk5" path="res://assets/Double/keyboard_s_outline.png" id="5_gee14"]
[ext_resource type="Texture2D" uid="uid://bg8hlr45y6ksa" path="res://assets/Double/keyboard_d_outline.png" id="6_0tnpc"]
[ext_resource type="Texture2D" uid="uid://bi5yj37g21ab1" path="res://assets/Double/keyboard_s.png" id="6_kvpfn"]
[ext_resource type="Texture2D" uid="uid://bw4mkupmyyusg" path="res://assets/Double/keyboard_d.png" id="8_dinhu"]
[ext_resource type="Texture2D" uid="uid://cubcldrko2127" path="res://assets/Double/keyboard_a.png" id="9_dinhu"]
[ext_resource type="Texture2D" uid="uid://bhshvw14hkayp" path="res://assets/Double/keyboard_w.png" id="12_kvuet"]
[ext_resource type="Texture2D" uid="uid://d2rx4sf7bc4we" path="res://assets/Double/keyboard_f1_outline.png" id="12_ssvqc"]
[ext_resource type="Texture2D" uid="uid://c6skcvsagaixl" path="res://assets/Double/keyboard_f1.png" id="13_264po"]
[ext_resource type="Texture2D" uid="uid://c8f8c5h6mdhar" path="res://assets/Double/keyboard_ctrl_outline.png" id="13_rysoc"]
[ext_resource type="Texture2D" uid="uid://c02epotrnj1gw" path="res://assets/Double/keyboard_space_outline.png" id="13_trtic"]
[ext_resource type="Texture2D" uid="uid://b3ckquyx0mrkf" path="res://assets/Double/keyboard_space.png" id="14_ir15t"]
[ext_resource type="Texture2D" uid="uid://534fkvnklswn" path="res://assets/Double/keyboard_ctrl.png" id="14_ssvqc"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_u8gkx"]
distance = -26.3102

[sub_resource type="Animation" id="Animation_pl11u"]
length = 0.001
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_u5sy4")]
}

[sub_resource type="Animation" id="Animation_e1j6l"]
resource_name = "w_pressed"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_u5sy4"), ExtResource("12_kvuet")]
}

[sub_resource type="Animation" id="Animation_bt5mj"]
resource_name = "w_released"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("12_kvuet"), ExtResource("4_u5sy4")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhx41"]
_data = {
&"RESET": SubResource("Animation_pl11u"),
&"w_pressed": SubResource("Animation_e1j6l"),
&"w_released": SubResource("Animation_bt5mj")
}

[sub_resource type="Animation" id="Animation_trtic"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_gee14")]
}

[sub_resource type="Animation" id="Animation_kvuet"]
resource_name = "s_pressed"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_gee14"), ExtResource("6_kvpfn")]
}

[sub_resource type="Animation" id="Animation_ir15t"]
resource_name = "s_released"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("6_kvpfn"), ExtResource("5_gee14")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ca42v"]
_data = {
&"RESET": SubResource("Animation_trtic"),
&"s_pressed": SubResource("Animation_kvuet"),
&"s_released": SubResource("Animation_ir15t")
}

[sub_resource type="Animation" id="Animation_ca42v"]
length = 0.001

[sub_resource type="Animation" id="Animation_1kice"]
resource_name = "d_pressed"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_lbhrr"), ExtResource("9_dinhu")]
}

[sub_resource type="Animation" id="Animation_5newe"]
resource_name = "d_released"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9_dinhu"), ExtResource("4_lbhrr")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_37s47"]
_data = {
&"RESET": SubResource("Animation_ca42v"),
&"a_pressed": SubResource("Animation_1kice"),
&"a_released": SubResource("Animation_5newe")
}

[sub_resource type="Animation" id="Animation_ssvqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_0tnpc")]
}

[sub_resource type="Animation" id="Animation_264po"]
resource_name = "d_pressed"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("6_0tnpc"), ExtResource("8_dinhu")]
}

[sub_resource type="Animation" id="Animation_rysoc"]
resource_name = "d_released"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("8_dinhu"), ExtResource("6_0tnpc")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1kice"]
_data = {
&"RESET": SubResource("Animation_ssvqc"),
&"d_pressed": SubResource("Animation_264po"),
&"d_released": SubResource("Animation_rysoc")
}

[sub_resource type="Animation" id="Animation_v2yb1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_ssvqc")]
}

[sub_resource type="Animation" id="Animation_qouja"]
resource_name = "f1_pressed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("12_ssvqc"), ExtResource("13_264po")]
}

[sub_resource type="Animation" id="Animation_wljb1"]
resource_name = "f1_released"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("13_264po"), ExtResource("12_ssvqc")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_js0lu"]
_data = {
&"RESET": SubResource("Animation_v2yb1"),
&"f1_pressed": SubResource("Animation_qouja"),
&"f1_released": SubResource("Animation_wljb1")
}

[sub_resource type="Animation" id="Animation_suyxu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_rysoc")]
}

[sub_resource type="Animation" id="Animation_sww3w"]
resource_name = "ctrl_pressed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("13_rysoc"), ExtResource("14_ssvqc")]
}

[sub_resource type="Animation" id="Animation_sgl2t"]
resource_name = "ctrl_released"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("14_ssvqc"), ExtResource("13_rysoc")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qouja"]
_data = {
&"RESET": SubResource("Animation_suyxu"),
&"ctrl_pressed": SubResource("Animation_sww3w"),
&"ctrl_released": SubResource("Animation_sgl2t")
}

[sub_resource type="Animation" id="Animation_bhx41"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_trtic")]
}

[sub_resource type="Animation" id="Animation_37s47"]
resource_name = "space_pressed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("13_trtic"), ExtResource("14_ir15t")]
}

[sub_resource type="Animation" id="Animation_qnb83"]
resource_name = "space_released"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("14_ir15t"), ExtResource("13_trtic")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sww3w"]
_data = {
&"RESET": SubResource("Animation_bhx41"),
&"space_pressed": SubResource("Animation_37s47"),
&"space_released": SubResource("Animation_qnb83")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ir15t"]
shader = ExtResource("1_lbhrr")
shader_parameter/color_deep = Color(0.1, 0, 0.2, 1)
shader_parameter/color_mid = Color(0.3, 0.1, 0.4, 1)
shader_parameter/color_accent = Color(0.5, 0.2, 0.7, 1)
shader_parameter/speed = 0.25
shader_parameter/blur_amount = 4.0
shader_parameter/gradient_scale = 2.5
shader_parameter/movement = 0.4

[node name="Game" type="Node2D"]

[node name="world" type="Node2D" parent="." node_paths=PackedStringArray("game", "camera")]
position = Vector2(-576, -324)
script = ExtResource("2_2shgi")
game = NodePath("..")
player_scene = ExtResource("1_oxd0a")
camera = NodePath("../Camera2D")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-550, 0)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_u8gkx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -298)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_u8gkx")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(550, 0)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_u8gkx")

[node name="KillArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 2)

[node name="KillShape" type="CollisionShape2D" parent="KillArea"]
position = Vector2(0, 287)
scale = Vector2(1.49818, 1.33028)
shape = SubResource("WorldBoundaryShape2D_u8gkx")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HelpMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_vtaks")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HelpMenu"]
layout_mode = 1
offset_right = 648.0
offset_bottom = 1152.0
scale = Vector2(0.5, 0.5)

[node name="Keyboard_W" type="TextureRect" parent="CanvasLayer/HelpMenu/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_u5sy4")
expand_mode = 1

[node name="WKeyAnimation" type="AnimationPlayer" parent="CanvasLayer/HelpMenu/VBoxContainer/Keyboard_W"]
libraries = {
&"": SubResource("AnimationLibrary_bhx41")
}

[node name="Keyboard_S" type="TextureRect" parent="CanvasLayer/HelpMenu/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("5_gee14")
expand_mode = 1

[node name="SKeyAnimation" type="AnimationPlayer" parent="CanvasLayer/HelpMenu/VBoxContainer/Keyboard_S"]
libraries = {
&"": SubResource("AnimationLibrary_ca42v")
}

[node name="Keyboard_A" type="TextureRect" parent="CanvasLayer/HelpMenu/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_lbhrr")
expand_mode = 1

[node name="AKeyAnimation" type="AnimationPlayer" parent="CanvasLayer/HelpMenu/VBoxContainer/Keyboard_A"]
libraries = {
&"": SubResource("AnimationLibrary_37s47")
}

[node name="Keyboard_D" type="TextureRect" parent="CanvasLayer/HelpMenu/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("6_0tnpc")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="DKeyAnimation" type="AnimationPlayer" parent="CanvasLayer/HelpMenu/VBoxContainer/Keyboard_D"]
libraries = {
&"": SubResource("AnimationLibrary_1kice")
}

[node name="Keyboard_F1" type="TextureRect" parent="CanvasLayer/HelpMenu/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("12_ssvqc")
expand_mode = 1

[node name="F1KeyAnimation" type="AnimationPlayer" parent="CanvasLayer/HelpMenu/VBoxContainer/Keyboard_F1"]
libraries = {
&"": SubResource("AnimationLibrary_js0lu")
}

[node name="Keyboard_CTRL" type="TextureRect" parent="CanvasLayer/HelpMenu/VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("13_rysoc")
expand_mode = 1

[node name="CTRLKeyAnimation" type="AnimationPlayer" parent="CanvasLayer/HelpMenu/VBoxContainer/Keyboard_CTRL"]
libraries = {
&"": SubResource("AnimationLibrary_qouja")
}

[node name="Keyboard_Space" type="TextureRect" parent="CanvasLayer/HelpMenu/VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("13_trtic")
expand_mode = 1

[node name="SpaceKeyAnimation" type="AnimationPlayer" parent="CanvasLayer/HelpMenu/VBoxContainer/Keyboard_Space"]
libraries = {
&"": SubResource("AnimationLibrary_sww3w")
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/HelpMenu"]
clip_contents = true
layout_mode = 1
offset_left = 64.0
offset_right = 464.0
offset_bottom = 1152.0
scale = Vector2(0.5, 0.5)

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/HelpMenu/VBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "Angle +"
fit_content = true
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/HelpMenu/VBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "Angle -"
fit_content = true
vertical_alignment = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="CanvasLayer/HelpMenu/VBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "Move Left"
fit_content = true
vertical_alignment = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="CanvasLayer/HelpMenu/VBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "Move Right"
fit_content = true
vertical_alignment = 1

[node name="RichTextLabel7" type="RichTextLabel" parent="CanvasLayer/HelpMenu/VBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Toggle Help "
fit_content = true
vertical_alignment = 1

[node name="RichTextLabel6" type="RichTextLabel" parent="CanvasLayer/HelpMenu/VBoxContainer2"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Jetpack"
fit_content = true
vertical_alignment = 1

[node name="RichTextLabel5" type="RichTextLabel" parent="CanvasLayer/HelpMenu/VBoxContainer2"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Shoot"
fit_content = true
vertical_alignment = 1

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_ir15t")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
